# libpymcr

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  MANIFEST.in  README.md  environment.yml  gist_test_ctf.py  notebook.ipynb.REMOVED.git-id  pace_python_demo.ipynb.REMOVED.git-id  release.py  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml  upload_pypi.yml
docs/developer_docs/: developer_notes.md  release_workflow.md
docs/user_docs/: examples.rst  index.rst  installation.rst
libpymcr/: Matlab.py  MatlabProxyObject.py  __init__.py  _version.py  utils.py
libpymcr/scripts/: matlab2python.py
pyHorace/horace/: horace.ctf.REMOVED.git-id
scripts/: matlab2python.py
src/: CMakeLists.txt  call.m  call_python.cpp  libpymcr.cpp  libpymcr.hpp  load_matlab.cpp  load_matlab.hpp  matlab.cmake  matlab_cpp_shared.hpp  matlab_data.hpp  matlab_data_array.hpp  matlab_mex.hpp  printmc.cpp  printmx.cpp  type_converter.cpp  type_converter.hpp
test/: run_test.py
